--- a/sm-core/src/main/resources/com/psf/sm/core/Bundle.properties
+++ b/sm-core/src/main/resources/com/psf/sm/core/Bundle.properties
@@ -1,6 +1,4 @@
-#Localized module labels. Defaults taken from POM (<name>, <description>, <groupId>) if unset.
-#OpenIDE-Module-Name=
-#OpenIDE-Module-Short-Description=
-#OpenIDE-Module-Long-Description=
-#OpenIDE-Module-Display-Category=
-#Sat Aug 09 11:01:27 AEST 2025
+
+OverviewTopComponent.lblValue.text=jLabel1
+OverviewTopComponent.btnPlus.text=+
+OverviewTopComponent.btnMinus.text=-
